--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "eslint-plugin-react-hooks": "^7.0.1",
     "prettier": "^3.8.0",
     "typescript-eslint": "^8.53.1",
-    "vite": "^7.3.1"
+    "vite": "^7.3.1",
+    "vite-plugin-zip-pack": "^1.2.4"
   },
   "dependencies": {
     "react": "^19.2.3",
